@@ -6384,12 +6384,18 @@ non-rational entries are converted to \typ{POLMOD} modulo $T$; no reduction
 mod $T$ is attempted: the representatives should be already reduced. Used to
 normalize the output of \kbd{nfroots}.
 
+\fun{GEN}{QXQX_to_mod_shallow}{GEN P, GEN T} $P$ a polynomial with \kbd{QXQ}
+coefficients; replace them by \kbd{mkpolmod(.,T)}. Shallow function.
+
+\fun{GEN}{QXQC_to_mod_shallow}{GEN V, GEN T} $V$ a vector with \kbd{QXQ}
+coefficients; replace them by \kbd{mkpolmod(.,T)}. Shallow function.
+
+\fun{GEN}{QXQM_to_mod_shallow}{GEN M, GEN T} $M$ a matrix with \kbd{QXQ}
+coefficients; replace them by \kbd{mkpolmod(.,T)}. Shallow function.
+
 \fun{GEN}{QXQXV_to_mod}{GEN V, GEN T} $V$ a vector of polynomials whose
 coefficients are \kbd{QXQ}. Analogous to \kbd{QXQV\_to\_mod}.
 Used to normalize the output of \kbd{nffactor}.
-
-\fun{GEN}{QXQX_to_mod_shallow}{GEN z, GEN T} $v$ a polynomial with \kbd{QXQ}
-coefficients; replace them by \kbd{mkpolmod(.,T)}. Shallow function.
 
 The following functions are obsolete and should not be used: they receive a
 polynomial with arbitrary coefficients, apply \kbd{RgX\_to\_FpX}, a function
