@@ -997,8 +997,10 @@ GEN     Kronecker_to_mod(GEN z, GEN pol);
 GEN     QX_ZXQV_eval(GEN P, GEN V, GEN dV);
 GEN     QXQ_charpoly(GEN A, GEN T, long v);
 GEN     QXQ_powers(GEN a, long n, GEN T);
-GEN     QXQX_to_mod_shallow(GEN z, GEN T);
+GEN     QXQC_to_mod_shallow(GEN V, GEN T);
+GEN     QXQM_to_mod_shallow(GEN V, GEN T);
 GEN     QXQV_to_mod(GEN V, GEN T);
+GEN     QXQX_to_mod_shallow(GEN z, GEN T);
 GEN     QXQXV_to_mod(GEN V, GEN T);
 GEN     QXV_QXQ_eval(GEN v, GEN a, GEN T);
 GEN     QXX_QXQ_eval(GEN v, GEN a, GEN T);
